--- a/index.html
+++ b/index.html
@@ -17,8 +17,20 @@
     </button>
     <div class="collapse navbar-collapse" id="main-navigation">
       <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="#">Offices Home</a>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Offices
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="#">Aurora Office</a>
+            <a class="dropdown-item" href="#">Office 2</a>
+            <a class="dropdown-item" href="#">Office 3</a>
+            <a class="dropdown-item" href="#">Office 4</a>
+            <a class="dropdown-item" href="#">Office 5</a>
+            <a class="dropdown-item" href="#">Office 6</a>
+            <a class="dropdown-item" href="#">Office 7</a>
+            <a class="dropdown-item" href="#">Office 8</a>
+          </div>
         </li>
       </ul>
     </div>
