--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
   <nav class="navbar navbar-expand-md">
     <a class="navbar-brand" href="#">
-      <img src="assets/rovisys transparent.jpg" width="100" height="35" alt="">
+      <img src="assets/rovisys transparent.png" width="100" height="35" alt="">
     </a>
     <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#main-navigation">
       <span class="navbar-toggler-icon"></span>
@@ -35,6 +36,12 @@
       </ul>
     </div>
   </nav>
+  <header class="page-header header container-fluid">
+  </header>
+
+  <div class="header">
+    <h1>Office Selector</h1>
+  </div>
 
   <script src="jquery-3.4.1.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
