added in and linked offices

--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
             Offices
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Aurora</a>
-            <a class="dropdown-item" href="#">Southborough</a>
-            <a class="dropdown-item" href="#">Thousand Oaks</a>
-            <a class="dropdown-item" href="#">Atlanta</a>
-            <a class="dropdown-item" href="#">Houston</a>
-            <a class="dropdown-item" href="#">Holly Springs</a>
-            <a class="dropdown-item" href="#">Singapore</a>
-            <a class="dropdown-item" href="#">Taiwan</a>
-            <a class="dropdown-item" href="#">Netherlands</a>
+            <a class="dropdown-item" href="/aurora.html">Aurora</a>
+            <a class="dropdown-item" href="/southborough.html">Southborough</a>
+            <a class="dropdown-item" href="/thousandoaks.html">Thousand Oaks</a>
+            <a class="dropdown-item" href="/atlanta.html">Atlanta</a>
+            <a class="dropdown-item" href="/houston.html">Houston</a>
+            <a class="dropdown-item" href="/hollysprings.html">Holly Springs</a>
+            <a class="dropdown-item" href="/singapore.html">Singapore</a>
+            <a class="dropdown-item" href="/taiwan.html">Taiwan</a>
+            <a class="dropdown-item" href="/netherlands.html">Netherlands</a>
           </div>
         </li>
       </ul>
@@ -48,52 +48,88 @@
     <div class="row">
       <div class="col-lg-4 col-md-4 col-sm-12">
         <h3 class="feature-title">Aurora, OH</h3>
-        <img src="assets/location.png" class="img-fluid" width="150" height="52.5" alt="">
-        <p>1455 Danner Drive<br/>Aurora, OH 44202</p>
+        <p>
+          <a href="/aurora.html">
+            <img src="assets/location.png" class="img-fluid" width="150" height="52.5" alt="">
+          </a>
+          <br/>1455 Danner Drive<br/>Aurora, OH 44202
+        </p>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-12">
         <h3 class="feature-title">Southborough, MA</h3>
-        <img src="assets/location.png" class="img-fluid" width="150" height="52.5" alt="">
-        <p>352 Turnpike Road, Suite 200<br/>Southborough, MA 01772</p>
+        <p>
+          <a href="/southborough.html">
+            <img src="assets/location.png" class="img-fluid" width="150" height="52.5" alt="">
+          </a>
+          <br/>352 Turnpike Road, Suite 200<br/>Southborough, MA 01772
+        </p>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-12">
         <h3 class="feature-title">Thousand Oaks, CA</h3>
-        <img src="assets/location.png" class="img-fluid" width="150" height="52.5" alt="">
-        <p>2545 W. Hillcrest Drive, Suite 230<br/>Thousand Oaks, CA 91320</p>
+        <p>
+          <a href="/thousandoaks.html">
+            <img src="assets/location.png" class="img-fluid" width="150" height="52.5" alt="">
+          </a>
+          <br/>2545 W. Hillcrest Drive, Suite 230<br/>Thousand Oaks, CA 91320
+        </p>
       </div>
     </div>
     <div class="row">
       <div class="col-lg-4 col-md-4 col-sm-12">
         <h3 class="feature-title">Atlanta, GA</h3>
-        <img src="assets/location.png" class="img-fluid" width="150" height="52.5" alt="">
-        <p>101 World Drive, Suite 225<br/>Peachtree City, GA 30269</p>
+        <p>
+          <a href="/atlanta.html">
+            <img src="assets/location.png" class="img-fluid" width="150" height="52.5" alt="">
+          </a>
+          <br/>101 World Drive, Suite 225<br/>Peachtree City, GA 30269
+        </p>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-12">
         <h3 class="feature-title">Houston, TX</h3>
-        <img src="assets/location.png" class="img-fluid" width="150" height="52.5" alt="">
-        <p>16290 Katy Fwy Suite 100<br/>Houston, TX 77094</p>
+        <p>
+          <a href="/houston.html">
+            <img src="assets/location.png" class="img-fluid" width="150" height="52.5" alt="">
+          </a>
+          <br/>16290 Katy Fwy Suite 100<br/>Houston, TX 77094
+        </p>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-12">
         <h3 class="feature-title">Holly Springs, NC</h3>
-        <img src="assets/location.png" class="img-fluid" width="150" height="52.5" alt="">
-        <p>480 Green Oaks Parkway<br/>Holly Springs, NC 27540</p>
+        <p>
+          <a href="/hollysprings.html">
+            <img src="assets/location.png" class="img-fluid" width="150" height="52.5" alt="">
+          </a>
+          <br/>480 Green Oaks Parkway<br/>Holly Springs, NC 27540
+        </p>
       </div>
     </div>
     <div class="row">
       <div class="col-lg-4 col-md-4 col-sm-12">
         <h3 class="feature-title">Singapore</h3>
-        <img src="assets/location.png" class="img-fluid" width="150" height="52.5" alt="">
-        <p>2 International Business Park #03-27<br/>The Strategy Tower 2<br/>Singapore 609930</p>
+        <p>
+          <a href="/singapore.html">
+            <img src="assets/location.png" class="img-fluid" width="150" height="52.5" alt="">
+          </a>
+          <br/>2 International Business Park #03-27<br/>The Strategy Tower 2<br/>Singapore 609930
+        </p>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-12">
         <h3 class="feature-title">Taiwan</h3>
-        <img src="assets/location.png" class="img-fluid" width="150" height="52.5" alt="">
-        <p>No.573, Sec. 2, Taiwan Blvd., West Dist.<br/>Taichung City 403 Taiwan (R.O.C.)</p>
+        <p>
+          <a href="/taiwan.html">
+            <img src="assets/location.png" class="img-fluid" width="150" height="52.5" alt="">
+          </a>
+          <br/>No.573, Sec. 2, Taiwan Blvd., West Dist.<br/>Taichung City 403 Taiwan (R.O.C.)
+        </p>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-12">
         <h3 class="feature-title">Netherlands</h3>
-        <img src="assets/location.png" class="img-fluid" width="150" height="52.5" alt="">
-        <p>Reactorweg 301<br/>3542AD, Utrecht The Netherlands</p>
+        <p>
+          <a href="/netherlands.html">
+            <img src="assets/location.png" class="img-fluid" width="150" height="52.5" alt="">
+          </a>
+          <br/>Reactorweg 301<br/>3542AD, Utrecht The Netherlands
+        </p>
       </div>
   </div>
        
