added in aurora rooms

--- a/auroraroom2.html
+++ b/auroraroom2.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <title>Aurora Office</title>
+  <title>Houston Office</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -41,58 +42,7 @@
   </header>
 
   <div class="header">
-    <h1>Aurora Office</h1>
-  </div>
-
-  <div class="container features">
-    <div class="row">
-      <div class="col-lg-4 col-md-4 col-sm-12">
-        <p>
-          <a href="/auroraroom1.html">
-            <img src="assets/room1.png" class="img-fluid" width="300" height="300" alt="">
-          </a>
-        </p>
-      </div>
-      <div class="col-lg-4 col-md-4 col-sm-12">
-        <p>
-          <a href="/auroraroom2.html">
-            <img src="assets/room2.png" class="img-fluid" width="300" height="300" alt="">
-          </a>
-        </p>
-      </div>
-      <div class="col-lg-4 col-md-4 col-sm-12">
-        <p>
-          <a href="/auroraroom3.html">
-            <img src="assets/room3.png" class="img-fluid" width="300" height="300" alt="">
-          </a>
-        </p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-4 col-md-4 col-sm-12">
-        <p>
-          <a href="/auroraroom4.html">
-            <img src="assets/room4.png" class="img-fluid" width="300" height="300" alt="">
-          </a>
-        </p>
-      </div>
-      <div class="col-lg-4 col-md-4 col-sm-12">
-        <p>
-          <a href="/auroraroom5.html">
-            <img src="assets/room5.png" class="img-fluid" width="300" height="300" alt="">
-          </a>
-        </p>
-      </div>
-      <div class="col-lg-4 col-md-4 col-sm-12">
-        <p>
-          <a href="/auroraroom6.html">
-            <img src="assets/room6.png" class="img-fluid" width="300" height="300" alt="">
-          </a>
-        </p>
-      </div>
-    </div>
-  </div>
-       
+    <h1>Aurora Room 2</h1>
   </div>
 
   <script src="jquery-3.4.1.min.js"></script>
